<?xml version="1.0"?>
<package>
  <name>traversal_filter</name>
  <version>0.0.0</version>
  <description>The traversal_filter package</description>

  <maintainer email="tera@todo.todo">tera</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_visualization</build_depend>
  <build_depend>grid_map_demos</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_visualization</run_depend>
  <run_depend>grid_map_demos</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
  </export>
</package>
